# openCL-hello-world

./: CMakeLists.txt  Readme.md  hello-world.cl  hello-world.cpp
